WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15143
Crash seen on Windows
https://bugs.webkit.org/show_bug.cgi?id=15143
Summary
Crash seen on Windows
Rahul Kuchhal
Reported
2007-09-04 13:20:12 PDT
I came across this crash couple of times on Windows XP: 0x1017c440 [document.cpp] WebCore::Document::frame() 0x102d2746 [plugindocument.cpp] WebCore::PluginTokenizer::writeRawData(char const *,int) 0x101ac513 [frameloader.cpp ] WebCore::FrameLoader::write(char const *,int,bool) 0x101ac8e0 [frameloader.cpp] WebCore::FrameLoader::addData(char const *,int) ... 0x101cea30 [ documentloader.cpp] WebCore::DocumentLoader::commitLoad(char const *,int) 0x101ceac7 [documentloader.cpp] WebCore::DocumentLoader::receivedData(char const *,int) 0x10283928 [mainresourceloader.cpp] WebCore::MainResourceLoader::addData(char const *,int,bool) 0x102852c1 [resourceloader.cpp] WebCore::ResourceLoader::didReceiveData(char const *,int,__int64,bool) 0x10283ad7 [mainresourceloader.cpp] WebCore::MainResourceLoader::didReceiveData(char const *,int,__int64,bool) 0x1028516a [resourceloader.cpp] WebCore::ResourceLoader::didReceiveData(WebCore::ResourceHandle *,char const *,int,int) Its not easily reproducible but does happen occasionally.
Attachments
Patch for this bug
(1.97 KB, patch)
2007-09-04 13:43 PDT
,
Rahul Kuchhal
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rahul Kuchhal
Comment 1
2007-09-04 13:43:45 PDT
Created
attachment 16200
[details]
Patch for this bug
David Kilzer (:ddkilzer)
Comment 2
2007-09-04 22:52:21 PDT
<
rdar://problem/5461153
>
Anders Carlsson
Comment 3
2007-09-13 11:15:26 PDT
Comment on
attachment 16200
[details]
Patch for this bug The patch looks great and I'm about to commit it. A tip is to use the prepare-ChangeLog script when creating the ChangeLog, as this figures out the changes in the repository automatically. Finally, if you provide your full name I can add that to the change log.
Anders Carlsson
Comment 4
2007-09-13 11:18:50 PDT
Committed revision 25540.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug