        Reviewed, tweaked and landed by Anders.

<rdar://problem/5461153>
        http://bugs.webkit.org/show_bug.cgi?id=15143
        Crash seen on Windows

        Null check frame before calling Frame::settings.

        * loader/PluginDocument.cpp:
        (WebCore::PluginTokenizer::writeRawData):



Canonical link: https://commits.webkit.org/20010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25540 268f45cc-cd09-0410-ab3c-d52691b4dbfc